fix: active tab on mobile

--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -92,6 +92,10 @@
             border-left: 1px solid $borderBase;
             border-right: 1px solid $borderBase;
 
+            &_active {
+                background-color: $borderBase;
+            }
+
             &:first-of-type {
                 border-radius: 8px 8px 0 0;
                 border-top: 1px solid $borderBase;
